[feat] Add usernames
Added usernames. Now on the first game load player can set the name before the connection to the room. Name should be not equal to null and be less than 11 chars. Name of the user is displayed in the room. So everyone in the room can see who is ready/not ready. Also user can reset his name by clicking special button.

--- a/HideAndSeekOnline/Assets/Scripts/RoomConnection/Project.RoomConnection.asmdef
+++ b/HideAndSeekOnline/Assets/Scripts/RoomConnection/Project.RoomConnection.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:1491147abca9d7d4bb7105af628b223e"
+        "GUID:1491147abca9d7d4bb7105af628b223e",
+        "GUID:5e561660d5b922141885132def7cadaf"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
