--- a/HideAndSeekOnline/Assets/Scripts/Global/Project.Global.asmdef
+++ b/HideAndSeekOnline/Assets/Scripts/Global/Project.Global.asmdef
@@ -1,11 +1,8 @@
 {
-    "name": "Project.Room",
+    "name": "Project.Global",
     "rootNamespace": "",
     "references": [
-        "GUID:1491147abca9d7d4bb7105af628b223e",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:5e561660d5b922141885132def7cadaf",
-        "GUID:e0cd26848372d4e5c891c569017e11f1"
+        "GUID:1491147abca9d7d4bb7105af628b223e"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
