[feat] Add match logic
In this update I've added a match logic. Now match ends if all hiders are dead or if seek time has inspired. Also if hider dies I spawn a death camera for him, so he can fly on map while match is still running. Added Match menu, it's a UI for match logic. Also I've made a few changes in code to make game works good.

--- a/HideAndSeekOnline/Assets/Scripts/Game/Server/Project.Game.Server.asmdef
+++ b/HideAndSeekOnline/Assets/Scripts/Game/Server/Project.Game.Server.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:5e561660d5b922141885132def7cadaf",
         "GUID:1491147abca9d7d4bb7105af628b223e",
-        "GUID:3a63ec452f87b6b468637339db0ef0ef"
+        "GUID:3a63ec452f87b6b468637339db0ef0ef",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
